fix spacings

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -13,6 +13,7 @@ input[type='submit'] {
     color 0.3s ease-in-out,
     outline 0.3s ease-in-out;
   text-decoration: none;
+  display: inline-block;
 
   &.primary {
     background-color: var(--color-accent);
